--- a/prj.conf
+++ b/prj.conf
@@ -22,6 +22,10 @@ CONFIG_AUXDISPLAY=y
 CONFIG_FPU=n
 CONFIG_FPU_SHARING=n
 
+#CONFIG_I2C=y
+#CONFIG_RTIO=y
+#CONFIG_I2C_RTIO=y
+
 #CONFIG_LOG=y
 #CONFIG_LOG_DEFAULT_LEVEL=4
 
