--- a/prj.conf
+++ b/prj.conf
@@ -22,6 +22,9 @@ CONFIG_AUXDISPLAY=y
 CONFIG_FPU=n
 CONFIG_FPU_SHARING=n
 
+CONFIG_SENSOR=y
+CONFIG_W1=y
+
 #CONFIG_I2C=y
 #CONFIG_RTIO=y
 #CONFIG_I2C_RTIO=y
