--- a/prj.conf
+++ b/prj.conf
@@ -25,6 +25,9 @@ CONFIG_FPU_SHARING=n
 CONFIG_SENSOR=y
 CONFIG_W1=y
 
+CONFIG_EEPROM=y
+CONFIG_EEPROM_EMULATOR=y
+
 #CONFIG_I2C=y
 #CONFIG_RTIO=y
 #CONFIG_I2C_RTIO=y
