--- a/prj.conf
+++ b/prj.conf
@@ -28,6 +28,9 @@ CONFIG_W1=y
 CONFIG_EEPROM=y
 CONFIG_EEPROM_EMULATOR=y
 
+CONFIG_WATCHDOG=y
+CONFIG_WDT_DISABLE_AT_BOOT=y
+
 #CONFIG_I2C=y
 #CONFIG_RTIO=y
 #CONFIG_I2C_RTIO=y
