--- a/prj.conf
+++ b/prj.conf
@@ -30,6 +30,7 @@ CONFIG_EEPROM_EMULATOR=y
 
 CONFIG_WATCHDOG=y
 CONFIG_WDT_DISABLE_AT_BOOT=y
+CONFIG_SPEED_OPTIMIZATIONS=y
 
 #CONFIG_I2C=y
 #CONFIG_RTIO=y
