--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,9 +6,9 @@
    },
 "bsp": {
    //"board": "stm32f4_disco",
-   //"board": "stm32l152c_disco",
+   "board": "stm32l152c_disco",
    //"board": "qmu_cortex_m3",
-   "board": "nucleo_f207zg",   
+   //"board": "nucleo_f207zg",   
    //"board": "nucleo_f072rb",   
  },
  "app": {
